# visualization.wavforhue

./: .gitignore  CMakeLists.txt
debian/: changelog  changelog.in  control  copyright
src/: Main.cpp  Main.h  Main_gles.cpp  WavforHue.cpp  WavforHue.h  WavforHue_Thread.cpp  WavforHue_Thread.h
visualization.wavforhue/: addon.xml.in  config.py
visualization.wavforhue/resources/: settings.xml
visualization.wavforhue/resources/language/English/: strings.po
visualization.wavforhue/resources/lib/: settings.py  tools.py
